<resources>
    <string name="app_name">C-Vision</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Result</string>
    <string name="tab_text_2">Detail</string>
    <string name="name_application">C-Vision</string>
    <string name="onboarding_greeting">Welcome to C-Vision</string>
    <string name="tagline_onboarding">prevent catarct for clearer vision and a brighter tomorrow</string>
    <string name="description_onboarding">Stay ahead in eye health by understanding your ocular well-being and proactively safeguarding against cataracts</string>
    <string name="text_banner">Look for information about eye conditions as a first step in preventing cataracts</string>
    <string name="learn_more">learn more</string>
    <string name="detection">detection</string>
    <string name="article">article</string>
    <string name="history">history</string>
    <string name="feature">Feature</string>
    <string name="articles">Article</string>
    <string name="upload_image">upload image</string>
    <string name="or">or</string>
    <string name="text_btn_take_foto"><![CDATA[open camera & take foto]]></string>
    <string name="profile">profile</string>
    <string name="information_amp_preference"><![CDATA[Information & preference]]></string>
    <string name="about">about</string>
    <string name="credits">credits</string>
    <string name="mode_display">mode display</string>
    <string name="logout">logout</string>
    <string name="next">next</string>
    <string name="get_started">get started</string>
    <string name="title_dialog_logout">logout</string>
    <string name="message_dialog_logout">are you sure want to logout?</string>
    <string name="cancel">cancel</string>
    <string name="disclaimer">The diagnostic results provided by this app are solely predictive in nature and should not be considered as absolute reference.</string>
    <string name="select_file">select file</string>
    <string name="about_content">C-Vision is an Android mobile-based application that aims to help cataract eye detection by utilizing artificial intelligence. All features in this application are still in the development stage. Therefore the results of cataract eye detection should not be an absolute diagnosis, because diagnosis can only be done by the medical field.</string>
    <string name="title_sign_in">Let’s sign in</string>
    <string name="welcome">Welcome,</string>
    <string name="please_login_to_entire_application">Please login to entire application</string>
    <string name="login">login</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="sign_up">sign up</string>
    <string name="title_sign_up">Let’s sign up</string>
    <string name="please_regist_to_entire_application">Please regist to entire application</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">sign in</string>
    <string name="username">username</string>
    <string name="request_granted">Permission request granted</string>
    <string name="request_denied">Permission request denied</string>
    <string name="cataract_description">Based on the uploaded image, it is predicted that the condition of your eyes in the image is indicative of cataracts.</string>
    <string name="normal_description">Based on the image that has been sent, predicting that your eye condition in the image does not show cataracts. however, please continue to maintain the health of your eyes.</string>
    <string name="return_to_previous_page">return to previous page</string>
    <string name="back_to_previous_page">back to previous page</string>
</resources>