<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.diagnose.DetectionActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/upload_image"
        android:textColor="@color/tuna"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <FrameLayout
        android:id="@+id/image_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_eye"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Small"
            app:strokeColor="@color/periwinkle_blue"
            app:strokeWidth="2dp"
            tools:layout_editor_absoluteX="26dp" />

        <Button
            android:id="@+id/btn_image_gallery"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#7AFFFFFF"
            android:text="@string/select_file"
            android:textColor="@color/tuna"
            app:icon="@drawable/ic_gallery"
            app:iconGravity="start"
            app:iconSize="26dp"
            app:iconTint="@color/tuna" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="26dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/or"
        android:textColor="@color/tuna"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_content" />

    <Button
        android:id="@+id/btn_take_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="26dp"
        android:backgroundTint="@color/pastel_blue"
        android:fontFamily="@font/poppins_medium"
        android:minWidth="300dp"
        android:minHeight="54dp"
        android:text="@string/text_btn_take_foto"
        android:textSize="18sp"
        app:icon="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small" />

    <Button
        android:id="@+id/btn_detection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:backgroundTint="@color/periwinkle_blue"
        android:fontFamily="@font/poppins_medium"
        android:minWidth="300dp"
        android:text="@string/detection"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_take_camera"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/load_animation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>